Fix the console input UI so that it displays propperly regardless of window width  by laying it out with 'display: table'. Also fixed file browser spacing since console overlapped the status bar.

--- a/ivle/webapp/filesystem/browser/media/browser.css
+++ b/ivle/webapp/filesystem/browser/media/browser.css
@@ -86,7 +86,7 @@
     right: 0;
     /* top == #topbar.height */
     top: 5em;
-    /* Space for the mimimised console */
-    bottom: 2em;
+    /* Space for the mimimised console (2em + 0.2em + 0.2em) */
+    bottom: 2.4em;
 }
 
